- added the server implementation PicaviJsonRpc_server as submodule (because the data models were needed) - added dependencies for JAX-RS and Jersey to the pom.xml - implemented sending and receiving data in the class SimpleRpcClient (request objects still need to be created)

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,20 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+
+		<!-- JAX-RS for REST -->
+		<dependency>
+			<groupId>javax.ws.rs</groupId>
+			<artifactId>javax.ws.rs-api</artifactId>
+			<version>2.0</version>
+		</dependency>
+		
+		<!-- Jersey (JAX-RS implementing service) -->
+		<dependency>
+			<groupId>com.eclipsesource.jaxrs</groupId>
+			<artifactId>jersey-all</artifactId>
+			<version>2.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
