--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<version>2.11.0</version>
 		</dependency>
 
+		<!-- Jackson for JSON parsing -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.8</version>
+		</dependency>
 
 		<!-- JAX-RS for REST -->
 		<dependency>
@@ -52,16 +58,21 @@
 			<version>2.0</version>
 		</dependency>
 
-		<!-- Jersey (JAX-RS implementing service) -->
-		<!-- <dependency> <groupId>com.eclipsesource.jaxrs</groupId> <artifactId>jersey-all</artifactId> 
-			<version>2.8</version> </dependency> <dependency> <groupId>org.glassfish.jersey.media</groupId> 
-			<artifactId>jersey-media-json-jackson</artifactId> <version>2.10.1</version> 
-			</dependency> <dependency> <groupId>org.glassfish.jersey.media</groupId> 
-			<artifactId>jersey-media-json-jackson</artifactId> <version>2.10.1</version> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-jdk-http</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>jersey-container-servlet</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jersey.media</groupId>
+			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.10.1</version>
 		</dependency>
 	</dependencies>
